--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
   controller_dir: '%kernel.project_dir%/src/Controller'
+  thumbnail_directory: '%kernel.project_dir%/public/assets/imgs/thumbnails/'
 
 services:
     # default configuration for services in *this* file
