--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,8 +5,10 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
   controller_dir: '%kernel.project_dir%/src/Controller'
+  imgs_directory: '%kernel.project_dir%/public/assets/imgs/'
   thumbnail_directory: '%kernel.project_dir%/public/assets/imgs/thumbnails/'
   article_image_directory: '%kernel.project_dir%/public/assets/imgs/articles/'
+  realization_image_directory: '%kernel.project_dir%/public/assets/imgs/realizations/'
 
 services:
     # default configuration for services in *this* file
